--- a/app/src/main/res/layout/activity_film_page.xml
+++ b/app/src/main/res/layout/activity_film_page.xml
@@ -55,7 +55,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/filmDesTW"
+            android:id="@+id/filmPlotTW"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
